--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,28 @@
+body{
+    background-color: rgb(215, 215, 248);
+}
+
 .header {
     display: flex;
     justify-content: center;
 }
+
+.players{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    display: flex;  
+    align-items: center; 
+    justify-content: space-between;
+    width: 80%;
+}
+
+
+form{
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 25px;
+  }
 
 .gameboard-container{ 
     display: grid;
@@ -26,10 +47,6 @@
     height: 50px;
 
     justify-content: center;
-    justify-items: center;
-    justify-self: center;
-
-    align-self: center;
     align-items: center;
-    align-content: center;
+
 }
